Updated code to fix layout bugs on the incident pane

--- a/WebContent/css/incident-pane.css
+++ b/WebContent/css/incident-pane.css
@@ -34,7 +34,9 @@
 
 #btn-response {
 	display:block;
-   	margin: 0 auto;
+   	width: 11em;
+   	margin-left:auto;
+	margin-right:auto;
 }
 
 #processing {
