--- a/WebContent/css/response-table.css
+++ b/WebContent/css/response-table.css
@@ -44,7 +44,7 @@ tbody tr:nth-child(even) {
 	float: right;
 }
 
-.resp-unit {
+/*.resp-unit {
 	width: 4em;
 }
 
@@ -66,4 +66,4 @@ tbody tr:nth-child(even) {
 
 .resp-dist {
 	width: 4em;
-}
+}*/
